--- a/app/src/main/res/layout/fragment_hspswitcher.xml
+++ b/app/src/main/res/layout/fragment_hspswitcher.xml
@@ -97,7 +97,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/infoLayout"
-                android:clickable="true">
+                android:clickable="true"
+                android:focusable="true"
+                android:focusableInTouchMode="true">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -129,12 +131,15 @@
                 android:layout_height="fill_parent"
                 android:id="@+id/newInfoText"
                 android:inputType="text"
-                android:editable="true"
-                android:clickable="true"
+                android:editable="false"
+                android:clickable="false"
                 android:enabled="true"
                 android:textSize="16sp"
-                android:textColor="@android:color/darker_gray"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:layout_marginTop="15dp"
+                android:autoText="true" />
 
         </LinearLayout>
     </ScrollView>
